// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextEditor /> render optional 1`] = `
<Form.Group
  isInvalid={false}
>
  <Form.Control
    as="textarea"
    className="textarea-response"
    disabled={false}
    label={
      <h3>
        Your response
         (
        Optional
        )
      </h3>
    }
    name="text-response"
    onChange={[MockFunction onChange]}
    placeholder="Enter your response to the prompt above"
    value="value"
  />
</Form.Group>
`;

exports[`<TextEditor /> render required 1`] = `
<Form.Group
  isInvalid={true}
>
  <Form.Control
    as="textarea"
    className="textarea-response"
    disabled={false}
    label={
      <h3>
        Your response
         (
        required
        )
      </h3>
    }
    name="text-response"
    onChange={[MockFunction onChange]}
    placeholder="Enter your response to the prompt above"
    value="value"
  />
  <Form.Control.Feedback
    type="invalid"
  >
    This field is required
  </Form.Control.Feedback>
</Form.Group>
`;
